--- a/po/pl.po
+++ b/po/pl.po
@@ -1,20 +1,29 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Treanslation file for XFce4's panel.
+# Copyright (C) Olivier Fourdain, 2003
+# This file is distributed under the same license as the XFce4.
 # FIRST AUTHOR <edscott@imp.mx>, 2003.
+#
+#  Paweł Pastuła <pastulap@poczta.onet.pl>, 2003
+#--
+#  Daniel Mróz <beorn@alpha.pl>, 2003
+#
+#     Changes:
+#        - fixed missing semicolons
+#        - minor changes and fixes (ie "Środek" -> "Środa")
+#        - translated few missing strings
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: 2003-12-26 19:23+0100\n"
-"Last-Translator: Paweł Pastuła <pastulap@poczta.onet.pl>\n"
-"Language-Team: POLISH <LL@li.org>\n"
+"POT-Creation-Date: 2003-11-05 17:25+0100\n"
+"PO-Revision-Date: 2003-12-25 18:20+0100\n"
+"Last-Translator: Daniel Mróz <beorn@alpha.pl>\n"
+"Language-Team: none <none@none>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: beorn@alpha.pl\n"
 
 #: panel/xfce_support.c:597
 msgid "Select file"
@@ -24,7 +33,7 @@ msgstr "Wybierz plik"
 msgid "Change item"
 msgstr "Zmień element"
 
-#: panel/controls_dialog.c:286 panel/item_dialog.c:681
+#: panel/controls_dialog.c:286 panel/item_dialog.c:647
 msgid "Position:"
 msgstr "Pozycja:"
 
@@ -38,74 +47,74 @@ msgstr ""
 "\n"
 "Czy chcesz usunąć element?"
 
-#: panel/item_dialog.c:321
+#: panel/item_dialog.c:320
 msgid "Other Icon"
 msgstr "Inna ikona"
 
-#: panel/item_dialog.c:346
+#: panel/item_dialog.c:345
 msgid "Select icon"
 msgstr "Wybierz ikonę"
 
-#: panel/item_dialog.c:396
+#: panel/item_dialog.c:384
 msgid "Icon:"
 msgstr "Ikona:"
 
-#: panel/item_dialog.c:467
+#: panel/item_dialog.c:433
 msgid "Select command"
 msgstr "Wybierz polecenie"
 
-#: panel/item_dialog.c:495
+#: panel/item_dialog.c:461
 msgid "Command:"
 msgstr "Polecenie:"
 
-#: panel/item_dialog.c:532 plugins/mailcheck/mailcheck.c:668
+#: panel/item_dialog.c:498 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
 msgstr "Uruchom w _terminalu"
 
-#: panel/item_dialog.c:537 plugins/mailcheck/mailcheck.c:676
+#: panel/item_dialog.c:503 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr "Użyj powiadomienie o uruchomieniu"
+msgstr "_Powiadom o uruchomieniu"
 
-#: panel/item_dialog.c:564
+#: panel/item_dialog.c:530
 msgid "Caption:"
 msgstr "Opis:"
 
-#: panel/item_dialog.c:597
+#: panel/item_dialog.c:563
 msgid "Tooltip:"
-msgstr "Podpowiedź"
+msgstr "Podpowiedź:"
 
-#: panel/item_dialog.c:633
+#: panel/item_dialog.c:599
 msgid "Menu:"
 msgstr ""
 
-#: panel/item_dialog.c:640
+#: panel/item_dialog.c:606
 msgid "Attach menu to launcher"
-msgstr "Podłącz menu do launchera"
+msgstr "Dołącz menu do aktywatora"
 
-#: panel/item_dialog.c:773
+#: panel/item_dialog.c:738
 msgid "Icon Preview"
-msgstr "Podgląd iknony"
+msgstr "Podgląd ikony"
 
-#: panel/item_dialog.c:777
+#: panel/item_dialog.c:742
 msgid "Drag file onto this frame to change the icon"
-msgstr "Przeciągnij plik na tą ramkę aby zmienić ikonę"
+msgstr "Przeciągnij plik do tej ramki aby zmienić ikonę"
 
-#: panel/item_dialog.c:965
+#: panel/item_dialog.c:930
 msgid "Change menu item"
 msgstr "Zmień element menu"
 
 #. add buttons
-#: panel/item_dialog.c:968
+#: panel/item_dialog.c:933
 msgid "Remove"
 msgstr "_Usuń"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "Naciśnij 3 klawisz myszy aby zmienić element"
+msgstr "Naciśnij 3 klawisz myszy aby usunąć element"
 
 #: panel/item.c:464
 msgid "Add launcher"
-msgstr "Dodaj launcher"
+msgstr "Dodaj aktywator"
 
 #: panel/item.c:469
 msgid "Add new item"
@@ -113,13 +122,13 @@ msgstr "Dodaj nowy element"
 
 #: panel/item.c:601
 msgid "Launcher"
-msgstr ""
+msgstr "Aktywator"
 
-#: panel/main.c:117
+#: panel/main.c:115
 msgid "Are you sure you want to exit?"
 msgstr "Czy na pewno chcesz wyjść?"
 
-#: panel/main.c:329
+#: panel/main.c:243
 #, c-format
 msgid ""
 "%s, version %s\n"
@@ -130,21 +139,21 @@ msgstr ""
 "Część środowiska XFCE\n"
 "http://www.xfce.org\n"
 
-#: panel/main.c:361
+#: panel/main.c:259
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Twój menadżer okien wydaje sie nie obsługiwać nowych wskazówek menadżera okien "
+"Twój menadżer okien nie obsługuje pewnych wskazówek menadżera okien "
 "zefiniowanych na stronie: http://www.freedesktop.org. \n"
 "Niektóre funkcje XFce mogą nie działać jak powinny."
 
-#: panel/controls.c:320 panel/panel.c:412
+#: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
 msgstr "/Dodaj _nowy element"
 
-#: panel/controls.c:322 panel/panel.c:414
+#: panel/controls.c:322 panel/panel.c:125
 msgid "/_Properties..."
 msgstr "/_Właściwości..."
 
@@ -156,43 +165,38 @@ msgstr "/_Usuń"
 msgid "This item has no configuration options"
 msgstr "Ten element nie ma konfigurowalnych opcji"
 
-#: panel/panel.c:410
+#: panel/panel.c:121
 msgid "/XFce Panel"
 msgstr "/Panel XFce"
 
-#: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_O XFce"
-
-#: panel/panel.c:416
-msgid "/_Help"
-msgstr "/_Pomoc"
-
-#: panel/panel.c:419
+#: panel/panel.c:126
 msgid "/_Settings manager"
 msgstr "/_Menadżer ustawień"
 
-#: panel/panel.c:422
+#: panel/panel.c:128
+msgid "/_About XFce"
+msgstr "/_O XFce"
+
+#: panel/panel.c:129
+msgid "/_Help"
+msgstr "/Pomoc"
+
+#: panel/panel.c:131
 msgid "/_Lock screen"
 msgstr "/_Zablokuj ekran"
 
-#: panel/panel.c:423
-#, fuzzy
-msgid "/_Restart"
-msgstr "/Z_restartuj"
-
-#: panel/panel.c:425
+#: panel/panel.c:132
 msgid "/E_xit"
-msgstr "/_Wyjście"
+msgstr "/W_yjście"
 
-#: panel/panel.c:812 settings/xfce_settings_plugin.c:82
+#: panel/panel.c:489 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
 msgid "XFce Panel"
 msgstr "Panel XFce"
 
 #: panel/icons.c:73
 msgid "Default"
-msgstr "Standardowy"
+msgstr "Domyślny"
 
 #: panel/icons.c:74
 msgid "Editor"
@@ -232,7 +236,7 @@ msgstr "Drukarka"
 
 #: panel/icons.c:83
 msgid "Productivity"
-msgstr "Produkcja"
+msgstr "Produktywność"
 
 #: panel/icons.c:84
 msgid "Sound"
@@ -246,7 +250,7 @@ msgstr ""
 msgid "Settings manager not available"
 msgstr "Menadżer ustawień niedostępny"
 
-#: panel/popup.c:261
+#: panel/popup.c:263
 msgid "Menu"
 msgstr ""
 
@@ -294,11 +298,11 @@ msgstr "Dół"
 
 #: settings/xfce_settings_dialog.c:374
 msgid "Panel size:"
-msgstr "Rozmiar panela:"
+msgstr "Rozmiar panelu:"
 
 #: settings/xfce_settings_dialog.c:390
 msgid "Panel orientation:"
-msgstr "Położenie panela:"
+msgstr "Położenie panelu:"
 
 #: settings/xfce_settings_dialog.c:407
 msgid "Popup position:"
@@ -310,7 +314,7 @@ msgstr "Styl ikon:"
 
 #: settings/xfce_settings_dialog.c:495
 msgid "Panel layer:"
-msgstr "Warstwa panela:"
+msgstr "Warstwa panelu:"
 
 #: settings/xfce_settings_dialog.c:515
 msgid "Normal"
@@ -326,11 +330,11 @@ msgstr "Ustaw"
 
 #: settings/xfce_settings_dialog.c:595
 msgid "Autohide:"
-msgstr "Automatyczne ukrywanie"
+msgstr "Automatyczne ukrywanie:"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
-msgstr "Ustawienia panela XFce"
+msgstr "Ustawienia panelu XFce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -347,62 +351,126 @@ msgstr "Pozycja"
 msgid "Behaviour"
 msgstr "Zachowanie"
 
-#. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
-#. * %-d : day of the month, without prefixed 0
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
-#: plugins/clock/clock.c:119
-msgid "%A, %-d %B %Y"
-msgstr ""
+#: plugins/clock/clock.c:57
+msgid "Sunday"
+msgstr "Niedziela"
 
-#: plugins/clock/clock.c:336
+#: plugins/clock/clock.c:58
+msgid "Monday"
+msgstr "Poniedziałek"
+
+#: plugins/clock/clock.c:59
+msgid "Tuesday"
+msgstr "Wtorek"
+
+#: plugins/clock/clock.c:60
+msgid "Wednesday"
+msgstr "Środa"
+
+#: plugins/clock/clock.c:61
+msgid "Thursday"
+msgstr "Czwartek"
+
+#: plugins/clock/clock.c:62
+msgid "Friday"
+msgstr "Piątek"
+
+#: plugins/clock/clock.c:63
+msgid "Saturday"
+msgstr "Sobota"
+
+#: plugins/clock/clock.c:67
+msgid "January"
+msgstr "Styczeń"
+
+#: plugins/clock/clock.c:68
+msgid "February"
+msgstr "Luty"
+
+#: plugins/clock/clock.c:69
+msgid "March"
+msgstr "Marzec"
+
+#: plugins/clock/clock.c:70
+msgid "April"
+msgstr "Kwiecień"
+
+#: plugins/clock/clock.c:71
+msgid "May"
+msgstr "Maj"
+
+#: plugins/clock/clock.c:72
+msgid "June"
+msgstr "Czerwiec"
+
+#: plugins/clock/clock.c:73
+msgid "July"
+msgstr "Lipiec"
+
+#: plugins/clock/clock.c:74
+msgid "August"
+msgstr "Sierpień"
+
+#: plugins/clock/clock.c:75
+msgid "September"
+msgstr "Wrzesień"
+
+#: plugins/clock/clock.c:76
+msgid "October"
+msgstr "Październik"
+
+#: plugins/clock/clock.c:77
+msgid "November"
+msgstr "Listopad"
+
+#: plugins/clock/clock.c:78
+msgid "December"
+msgstr "Grudzień"
+
+#: plugins/clock/clock.c:350
 msgid "Clock type:"
 msgstr "Typ zegarka:"
 
-#: plugins/clock/clock.c:349
+#: plugins/clock/clock.c:363
 msgid "Analog"
 msgstr "Analogowy"
 
-#: plugins/clock/clock.c:353
+#: plugins/clock/clock.c:367
 msgid "Digital"
 msgstr "Cyfrowy"
 
-#: plugins/clock/clock.c:357
+#: plugins/clock/clock.c:371
 msgid "LED"
 msgstr ""
 
-#: plugins/clock/clock.c:419
+#: plugins/clock/clock.c:433
 msgid "Hour mode:"
-msgstr "Tryb godzin"
+msgstr "Tryb godzin:"
 
-#: plugins/clock/clock.c:426
+#: plugins/clock/clock.c:440
 #, fuzzy
 msgid "24 hour"
-msgstr "24 godzinny:"
+msgstr "24 godzinny"
 
-#: plugins/clock/clock.c:432
+#: plugins/clock/clock.c:446
 msgid "12 hour"
 msgstr "12 godzinny"
 
-#: plugins/clock/clock.c:438
+#: plugins/clock/clock.c:452
 msgid "AM/PM"
-msgstr ""
+msgstr "AM/PM"
 
-#: plugins/clock/clock.c:476
+#: plugins/clock/clock.c:490
 msgid "Show seconds:"
 msgstr "Pokaż sekundy:"
 
-#: plugins/clock/clock.c:585
+#: plugins/clock/clock.c:599
 msgid "Xfce Clock"
 msgstr "Zegar XFce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
-msgstr ""
+msgstr "Lista obszarów roboczych"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
@@ -439,7 +507,7 @@ msgstr "Informacja"
 
 #: plugins/systembuttons/systembuttons.c:500
 msgid "Show two buttons:"
-msgstr "Pokaż dwa przyciski"
+msgstr "Pokaż dwa przyciski:"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
@@ -456,7 +524,7 @@ msgstr "Przycisk 2:"
 
 #: plugins/systembuttons/systembuttons.c:600
 msgid "System buttons"
-msgstr "Przysicki systemowe"
+msgstr "Przyciski systemowe"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
@@ -472,7 +540,7 @@ msgstr "Polecenie poczty:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Polecenie uruchomione po naciśnięciu na przycisku panela"
+msgstr "Polecenie do uruchomienia po naciśnieciu na przycisku panelu"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
@@ -482,65 +550,11 @@ msgstr "Interwał (sek):"
 msgid "Mail check"
 msgstr "Sprawdzenie poczty"
 
-#~ msgid "Sunday"
-#~ msgstr "Niedziela"
-
-#~ msgid "Monday"
-#~ msgstr "Poniedziałek"
-
-#~ msgid "Tuesday"
-#~ msgstr "Wtorek"
-
-#~ msgid "Wednesday"
-#~ msgstr "Środek"
-
-#~ msgid "Thursday"
-#~ msgstr "Czwartek"
-
-#~ msgid "Friday"
-#~ msgstr "Piątek"
-
-#~ msgid "Saturday"
-#~ msgstr "Sobota"
-
-#~ msgid "January"
-#~ msgstr "Styczeń"
-
-#~ msgid "February"
-#~ msgstr "Luty"
-
-#~ msgid "March"
-#~ msgstr "Marzec"
-
-#~ msgid "April"
-#~ msgstr "Kwiecień"
-
-#~ msgid "May"
-#~ msgstr "Maj"
-
-#~ msgid "June"
-#~ msgstr "Czerwiec"
-
-#~ msgid "July"
-#~ msgstr "Lipiec"
-
-#~ msgid "August"
-#~ msgstr "Sierpień"
-
-#~ msgid "September"
-#~ msgstr "Wrzesień"
-
-#~ msgid "October"
-#~ msgstr "Październik"
-
-#~ msgid "November"
-#~ msgstr "Listopad"
-
-#~ msgid "December"
-#~ msgstr "Grudzień"
-
 #~ msgid "_Done"
 #~ msgstr "_Zamknij"
+
+#~ msgid "_Revert"
+#~ msgstr "Z_amień"
 
 #~ msgid "Type:"
 #~ msgstr "Typ:"
