--- a/po/fi.po
+++ b/po/fi.po
@@ -1,13 +1,14 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Translation of xfce4-panel into Finnish.
+# This file is distributed under the same license as the xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce Development Team.
 # Ilkka Ollakka <ilkka.j.ollakka@students.oamk.fi>, 2003
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: XFCE4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2005-01-19 19:45+0200\n"
+"PO-Revision-Date: 2005-08-11 14:24+0200\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -40,7 +41,7 @@ msgstr "Komento:"
 
 #: ../panel/item_dialog.c:246 ../plugins/launcher/launcher-dialog.c:602
 msgid "Run in _terminal"
-msgstr "Aja Pää_tteessä"
+msgstr "Suorita _päätteessä"
 
 #: ../panel/item_dialog.c:264
 msgid "Use startup _notification"
@@ -72,11 +73,12 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Xfce Paneeli\n"
+" Xfce paneeli\n"
 " Versio %s\n"
 "\n"
-" Osa Xfce-työpöytäympäristöä\n"
+" Xfce-työpöytäympäristön osa\n"
 " http://www.xfce.org\n"
+"\n"
 " Lisensoitu GNU GPL:n mukaisesti.\n"
 "\n"
 
@@ -98,7 +100,7 @@ msgstr "Ei voitu luoda paneelin osaa \"%s\"."
 #: ../panel/controls.c:709
 #, c-format
 msgid "Remove %s item?"
-msgstr ""
+msgstr "Poista osa %s?"
 
 #: ../panel/controls.c:743 ../panel/panel.c:719 ../iconbox/iconbox.c:618
 msgid "_Properties..."
@@ -110,7 +112,7 @@ msgstr "P_oista"
 
 #: ../panel/controls.c:757 ../panel/panel.c:709
 msgid "Add _new item"
-msgstr "Lisää _uusi osa"
+msgstr "_Lisää uusi osa"
 
 #: ../panel/controls.c:1082
 msgid "This item has no configuration options"
@@ -120,11 +122,11 @@ msgstr "Tällä osalla ei ole muokattavia ominaisuuksia"
 #: ../settings/xfce_settings_plugin.c:86
 #: ../settings/xfce_settings_dialog.c:409
 msgid "Xfce Panel"
-msgstr "Xfce Paneeli"
+msgstr "Xfce paneeli"
 
 #: ../panel/panel.c:724
 msgid "_About Xfce"
-msgstr "T_ietoja Xfce:stä"
+msgstr "Tietoja _Xfce:stä"
 
 #: ../panel/panel.c:729
 msgid "_Help"
@@ -132,15 +134,15 @@ msgstr "_Apua"
 
 #: ../panel/panel.c:738
 msgid "_Lock screen"
-msgstr "_Lukitse näyttö"
+msgstr "Lu_kitse näyttö"
 
 #: ../panel/panel.c:743
 msgid "_Restart"
-msgstr "Palauta"
+msgstr "Pala_uta"
 
 #: ../panel/panel.c:752 ../iconbox/iconbox.c:628
 msgid "E_xit"
-msgstr "Poistu"
+msgstr "_Poistu"
 
 #: ../panel/icons.c:63 ../plugins/launcher/launcher-dialog.c:83
 msgid "Default"
@@ -164,7 +166,7 @@ msgstr "Pelit"
 
 #: ../panel/icons.c:68 ../plugins/launcher/launcher-dialog.c:88
 msgid "Help browser"
-msgstr "Ohjetiedostoselain"
+msgstr "Ohjeselain"
 
 #: ../panel/icons.c:69 ../plugins/launcher/launcher-dialog.c:89
 msgid "Multimedia"
@@ -193,17 +195,16 @@ msgstr "Ääni"
 #. Translation with context.
 #. * Translators only need to translate 'Terminal'
 #: ../panel/icons.c:77
-#, fuzzy
 msgid "icons|Terminal"
 msgstr "Pääte"
 
 #: ../panel/mcs_client.c:169
 msgid "Settings manager not available"
-msgstr "Asetusten hallintaohjelmaa ei saatavilla"
+msgstr "Asetustenhallintaa ei saatavilla"
 
 #: ../taskbar/xftaskbar.c:510 ../plugins/systray/systray.c:88
 msgid "There is already a system tray running on this screen"
-msgstr "Näytöllä on jo toiminnassa järjestelmälokero"
+msgstr "Näytöllä on jo järjestelmälokero"
 
 #: ../taskbar/xftaskbar.c:516 ../plugins/systray/systray.c:94
 #, c-format
@@ -219,13 +220,12 @@ msgstr "Järjestelmälokeron rekisteröinti ei onnistu: %s"
 #. * %Y  : four digit year
 #.
 #: ../taskbar/xftaskbar.c:616 ../plugins/systray/systray.c:175
-#, fuzzy
 msgid "%A %d %B %Y"
-msgstr "%A, %d %B %Y"
+msgstr "%A %d.%m.%Y"
 
 #: ../taskbar/xftaskbar.c:637 ../plugins/systray/systray.c:200
 msgid "%H:%M"
-msgstr ""
+msgstr "%H:%M"
 
 #: ../taskbar/xftaskbar.c:910 ../settings/xftaskbar_plugin.c:696
 #: ../settings/xftaskbar_plugin.c:706 ../settings/xftaskbar_plugin.c:987
@@ -237,18 +237,16 @@ msgid "Cannot create MCS client channel"
 msgstr "Ei voi luoda MCS-asiakaskanavaa"
 
 #: ../iconbox/iconbox.c:568
-#, fuzzy
 msgid "Xfce Iconbox"
-msgstr "Xfce4 kuvakelaatikon parametrointi"
+msgstr "Xfce kuvakelaatikko"
 
 #: ../iconbox/iconbox.c:576 ../plugins/launcher/launcher.c:121
 msgid "Developer"
-msgstr ""
+msgstr "Kehittäjä"
 
 #: ../iconbox/iconbox.c:612
-#, fuzzy
 msgid "_About"
-msgstr "T_ietoja Xfce:stä"
+msgstr "T_ietoja"
 
 #: ../settings/xfce_settings_dialog.c:87 ../settings/xftaskbar_plugin.c:480
 #: ../settings/xftaskbar_plugin.c:511
@@ -278,20 +276,19 @@ msgstr "Pysty"
 
 #: ../settings/xfce_settings_dialog.c:195 ../settings/iconbox_plugin.c:762
 msgid "None"
-msgstr ""
+msgstr "Ei mitään"
 
 #: ../settings/xfce_settings_dialog.c:199
-#, fuzzy
 msgid "At both sides"
-msgstr "Piilota automaattisesti"
+msgstr "Molemmissa päissä"
 
 #: ../settings/xfce_settings_dialog.c:203
 msgid "At the start"
-msgstr ""
+msgstr "Alkupäässä"
 
 #: ../settings/xfce_settings_dialog.c:207
 msgid "At the end"
-msgstr ""
+msgstr "Loppupäässä"
 
 #: ../settings/xfce_settings_dialog.c:240
 msgid "Panel size:"
@@ -303,7 +300,7 @@ msgstr "Paneelin suunta:"
 
 #: ../settings/xfce_settings_dialog.c:273
 msgid "Handles:"
-msgstr ""
+msgstr "Kahvat:"
 
 #: ../settings/xfce_settings_dialog.c:309
 msgid "Autohide:"
@@ -311,11 +308,11 @@ msgstr "Piilota automaattisesti:"
 
 #: ../settings/xfce_settings_dialog.c:355
 msgid "Full width:"
-msgstr ""
+msgstr "Täysi leveys:"
 
 #: ../settings/xfce_settings_dialog.c:426
 msgid "Xfce Panel Settings"
-msgstr "Xfce Paneelin Asetukset"
+msgstr "Xfce paneelin asetukset"
 
 #: ../settings/xfce_settings_dialog.c:436
 msgid "Appearance"
@@ -333,28 +330,27 @@ msgstr "Sijainti"
 
 #: ../settings/xftaskbar_plugin.c:399
 msgid "_Top"
-msgstr "Yläreuna"
+msgstr "_Yläreuna"
 
 #: ../settings/xftaskbar_plugin.c:409
 msgid "_Bottom"
-msgstr "Alareuna"
+msgstr "_Alareuna"
 
 #: ../settings/xftaskbar_plugin.c:422
-#, fuzzy
 msgid "Alignment:"
-msgstr "Tasaus"
+msgstr "Tasaa:"
 
 #: ../settings/xftaskbar_plugin.c:429
 msgid "_Left"
-msgstr "Vasemmalle"
+msgstr "_Vasemmalle"
 
 #: ../settings/xftaskbar_plugin.c:439
 msgid "_Center"
-msgstr "Keskelle"
+msgstr "_Keskelle"
 
 #: ../settings/xftaskbar_plugin.c:447
 msgid "_Right"
-msgstr "Oikealle"
+msgstr "_Oikealle"
 
 #. size
 #: ../settings/xftaskbar_plugin.c:464
@@ -362,7 +358,6 @@ msgid "Size"
 msgstr "Koko"
 
 #: ../settings/xftaskbar_plugin.c:474
-#, fuzzy
 msgid "Height:"
 msgstr "Korkeus:"
 
@@ -372,7 +367,7 @@ msgstr "Leveys:"
 
 #: ../settings/xftaskbar_plugin.c:541
 msgid "_Shrink to fit"
-msgstr ""
+msgstr "_Mahdollisimman pieni"
 
 #. Autohide
 #: ../settings/xftaskbar_plugin.c:561
@@ -385,21 +380,20 @@ msgstr "Piilota te_htäväpalkki automaattisesti"
 
 #. tasklist
 #: ../settings/xftaskbar_plugin.c:583 ../plugins/tasklist/tasklist.c:92
-#, fuzzy
 msgid "Tasklist"
-msgstr "Tehtävät"
+msgstr "Tehtävälista"
 
 #: ../settings/xftaskbar_plugin.c:592
 msgid "Show tasklist"
-msgstr ""
+msgstr "Näytä tehtävälista"
 
 #: ../settings/xftaskbar_plugin.c:604
 msgid "Show tasks from _all workspaces"
-msgstr "Näytä k_aikkien työpöytien tehtävät"
+msgstr "Näytä _kaikkien työpöytien tehtävät"
 
 #: ../settings/xftaskbar_plugin.c:613
 msgid "Always _group tasks"
-msgstr "Ryhmitä tehtävät aina"
+msgstr "_Ryhmitä tehtävät aina"
 
 #: ../settings/xftaskbar_plugin.c:621
 msgid "Show application _names"
@@ -412,52 +406,49 @@ msgstr "Työpöydän vaihtaja"
 
 #: ../settings/xftaskbar_plugin.c:634
 msgid "Show _pager in taskbar"
-msgstr "Näytä työ_pöydän vaihtaja tehtäväpalkissa"
+msgstr "Näytä työpöydän_vaihtaja tehtäväpalkissa"
 
 #. status area
 #: ../settings/xftaskbar_plugin.c:641
 msgid "Status area"
-msgstr ""
+msgstr "Tila-alue"
 
 #: ../settings/xftaskbar_plugin.c:650
-#, fuzzy
 msgid "Show _notification icons"
-msgstr "Näytä sovellusten _nimet"
+msgstr "Näytä _järjestelmäkuvakkeet"
 
 #: ../settings/xftaskbar_plugin.c:657 ../plugins/systray/systray.c:535
 msgid "Show _time"
-msgstr ""
+msgstr "Näytä _aika"
 
 #: ../settings/xftaskbar_plugin.c:718
 msgid "General"
-msgstr ""
+msgstr "Yleiset"
 
 #: ../settings/xftaskbar_plugin.c:729
 msgid "Components"
-msgstr ""
+msgstr "Komponentit"
 
 #: ../settings/iconbox_plugin.c:629
 msgid "Icon size"
-msgstr ""
+msgstr "Kuvakkeen koko"
 
 #: ../settings/iconbox_plugin.c:691
-#, fuzzy
 msgid "_Show only minimized applications"
-msgstr "Näytä sovellusten _nimet"
+msgstr "Näytä vain _pienennetyt sovellukset"
 
 #: ../settings/iconbox_plugin.c:754
 msgid "Transparency"
-msgstr ""
+msgstr "Läpinäkyvyys"
 
 #: ../settings/iconbox_plugin.c:777
 msgid "Full"
-msgstr ""
+msgstr "Täysi"
 
 #: ../settings/iconbox_plugin.c:831 ../settings/iconbox_plugin.c:841
 #: ../settings/iconbox_plugin.c:992
-#, fuzzy
 msgid "Iconbox"
-msgstr "Kuvakelaatikon parametrointi"
+msgstr "Kuvakelaatikko"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -469,7 +460,7 @@ msgstr "Kuvakelaatikon parametrointi"
 #.
 #: ../plugins/clock/clock.c:191
 msgid "%A, %d %B %Y"
-msgstr "%A, %d %B %Y"
+msgstr "%A, %d %Bta %Y"
 
 #: ../plugins/clock/clock.c:421
 msgid "Clock type:"
@@ -489,7 +480,7 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:504
 msgid "Hour mode:"
-msgstr "Tuntinäyttö"
+msgstr "Tuntinäyttö:"
 
 #: ../plugins/clock/clock.c:511
 msgid "24 hour"
@@ -509,39 +500,38 @@ msgstr "Näytä sekunnit:"
 
 #: ../plugins/clock/clock.c:674
 msgid "Xfce Clock"
-msgstr "Xfce Kello"
+msgstr "Xfce kello"
 
 #: ../plugins/flexspace/flexspace.c:78
 msgid "Flexible space"
-msgstr ""
+msgstr "Venyvä erotin"
 
 #: ../plugins/launcher/launcher.c:113 ../plugins/launcher/launcher.c:306
 msgid "Launcher"
 msgstr "Käynnistin"
 
 #: ../plugins/launcher/launcher.c:113
-#, fuzzy
 msgid "Launcher Plugin"
-msgstr "Käynnistin"
+msgstr "Käynnistin-liitännäinen"
 
 #: ../plugins/launcher/launcher.c:381
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Could not run \"%s\":\n"
 "%s"
-msgstr "Ei voitu luoda paneelin osaa \"%s\"."
+msgstr ""
+"Kohteen \"%s\" suoritus epäonnistui:\n"
+"%s"
 
 #: ../plugins/launcher/launcher.c:825
 #: ../plugins/launcher/launcher-dialog.c:1185
-#, fuzzy
 msgid "New item"
-msgstr "Lisää uusi osa"
+msgstr "Uusi osa"
 
 #: ../plugins/launcher/launcher.c:827
 #: ../plugins/launcher/launcher-dialog.c:1186
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "Tällä osalla ei ole muokattavia ominaisuuksia"
+msgstr "Osaa ei ole vielä asetettu"
 
 #: ../plugins/launcher/launcher-dialog.c:95 ../config/contents.xml.in.h:14
 msgid "Terminal"
@@ -549,78 +539,72 @@ msgstr "Pääte"
 
 #: ../plugins/launcher/launcher-dialog.c:96
 msgid "Development"
-msgstr ""
+msgstr "Kehitys"
 
 #: ../plugins/launcher/launcher-dialog.c:97 ../config/contents.xml.in.h:13
-#, fuzzy
 msgid "Settings"
-msgstr "Paneelin asetukset"
+msgstr "Asetukset"
 
 #: ../plugins/launcher/launcher-dialog.c:98
 msgid "System"
-msgstr ""
+msgstr "Järjestelmä"
 
 #: ../plugins/launcher/launcher-dialog.c:99
 msgid "Windows programs"
-msgstr ""
+msgstr "Windows-ohjelmat"
 
 #: ../plugins/launcher/launcher-dialog.c:262
-#, fuzzy
 msgid "Name"
-msgstr "Pelit"
+msgstr "Nimi"
 
 #: ../plugins/launcher/launcher-dialog.c:282
-#, fuzzy
 msgid "Description"
-msgstr "Sijainti"
+msgstr "Kuvaus"
 
 #: ../plugins/launcher/launcher-dialog.c:397
-#, fuzzy
 msgid "Select image file"
-msgstr "Valitse tiedosto"
+msgstr "Valitse kuvatiedosto"
 
 #: ../plugins/launcher/launcher-dialog.c:468
 msgid "Other..."
-msgstr ""
+msgstr "Joku muu..."
 
 #: ../plugins/launcher/launcher-dialog.c:567
-#, fuzzy
 msgid "Command"
-msgstr "Komento:"
+msgstr "Komento"
 
 #: ../plugins/launcher/launcher-dialog.c:622
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "Käytä käy_nnistyksen huomautusta"
+msgstr "Käytä käynnistyksen _huomautusta"
 
 #: ../plugins/launcher/launcher-dialog.c:644
 #: ../plugins/launcher/launcher-dialog.c:649
-#, fuzzy
 msgid "Edit launcher"
-msgstr "Lisää käynnistin"
+msgstr "Muokkaa käynnistintä"
 
 #: ../plugins/launcher/launcher-dialog.c:1242
-#, fuzzy
 msgid "_Edit"
-msgstr "Editori"
+msgstr "_Muokkaa"
 
 #: ../plugins/launcher/launcher-dialog.c:1253
 msgid "_Up"
-msgstr ""
+msgstr "_Ylös"
 
 #: ../plugins/launcher/launcher-dialog.c:1259
 msgid "_Down"
-msgstr ""
+msgstr "_Alas"
 
 #: ../plugins/launcher/launcher-dialog.c:1270
 msgid "_Add"
-msgstr ""
+msgstr "_Lisää"
 
 #: ../plugins/launcher/launcher-dialog.c:1300
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"Listan ensimmäinen kohde näytetään paneelissa. Muut kohteet näkyvät "
+"valikossa."
 
 #: ../plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
@@ -632,11 +616,11 @@ msgstr "Uuden postin komento:"
 
 #: ../plugins/mailcheck/mailcheck.c:889
 msgid "Command to run when new mail arrives"
-msgstr "Komento, joka ajetaan, kun uutta postia on saapunut"
+msgstr "Komento, joka suoritetaan kun uutta postia on saapunut"
 
 #: ../plugins/mailcheck/mailcheck.c:919
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Komento, joka ajetaan kuvaketta painettaessa"
+msgstr "Komento, joka suoritetaan kuvaketta painettaessa"
 
 #: ../plugins/mailcheck/mailcheck.c:940
 msgid "Interval (sec):"
@@ -644,7 +628,7 @@ msgstr "Väli (sekuntia):"
 
 #: ../plugins/mailcheck/mailcheck.c:1017
 msgid "Mail checker"
-msgstr "Postin tarkistin"
+msgstr "Postintarkistin"
 
 #: ../plugins/pager/pager.c:313
 msgid "Number of rows:"
@@ -656,7 +640,7 @@ msgstr "Sarakkeiden lukumäärä:"
 
 #: ../plugins/pager/pager.c:372
 msgid "Graphical pager"
-msgstr "Graafinen työpöydän vaihtaja"
+msgstr "Graafinen työpöydänvaihtaja"
 
 #: ../plugins/separator/separator.c:65
 msgid "Separator"
@@ -664,7 +648,7 @@ msgstr "Erotin"
 
 #: ../plugins/switcher/switcher.c:695
 msgid "Desktop switcher"
-msgstr "Työpöydän vaihtaja"
+msgstr "Työpöydänvaihtaja"
 
 #: ../plugins/systembuttons/systembuttons.c:85
 msgid ""
@@ -682,19 +666,16 @@ msgstr "Lukitse näyttö"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:172
-#, fuzzy
 msgid "tip|Exit"
 msgstr "Lopeta"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:174
-#, fuzzy
 msgid "tip|Setup"
 msgstr "Asetukset"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:176
-#, fuzzy
 msgid "tip|Info"
 msgstr "Tietoja"
 
@@ -717,11 +698,11 @@ msgstr "Tietoja"
 
 #: ../plugins/systembuttons/systembuttons.c:553
 msgid "Button 1:"
-msgstr "Nappi 1:"
+msgstr "Painike 1:"
 
 #: ../plugins/systembuttons/systembuttons.c:568
 msgid "Button 2:"
-msgstr "Nappi 2:"
+msgstr "Painike 2:"
 
 #. checkbox
 #: ../plugins/systembuttons/systembuttons.c:582
@@ -734,11 +715,11 @@ msgstr "Järjestelmäpainikkeet"
 
 #: ../plugins/systray/systray.c:492
 msgid "Status Area"
-msgstr ""
+msgstr "Tila-alue"
 
 #: ../plugins/systray/systray.c:555
 msgid "Display time before icons"
-msgstr ""
+msgstr "Näytä aika ennen kuvakkeita"
 
 #: ../settings/xfce-panel-settings.desktop.in.h:1
 msgid "Panel Settings"
@@ -750,136 +731,64 @@ msgstr "Xfce 4 paneelin asetukset"
 
 #: ../settings/xfce-iconbox-settings.desktop.in.h:1
 msgid "Iconbox Settings"
-msgstr "Kuvakelaatikon parametrointi"
+msgstr "Kuvakelaatikon asetukset"
 
 #: ../settings/xfce-iconbox-settings.desktop.in.h:2
 msgid "Xfce 4 Iconbox Settings"
-msgstr "Xfce4 kuvakelaatikon parametrointi"
+msgstr "Xfce4 kuvakelaatikon asetukset"
 
 #: ../settings/xfce-taskbar-settings.desktop.in.h:1
-#, fuzzy
 msgid "Taskbar Settings"
-msgstr "Paneelin asetukset"
+msgstr "Tehtäväpalkin asetukset"
 
 #: ../settings/xfce-taskbar-settings.desktop.in.h:2
-#, fuzzy
 msgid "Xfce 4 Taskbar Settings"
-msgstr "Xfce 4 paneelin asetukset"
+msgstr "Xfce 4 tehtäväpalkin asetukset"
 
 #: ../config/contents.xml.in.h:1
 msgid "Appfinder"
-msgstr ""
+msgstr "Sovellushaku"
 
 #: ../config/contents.xml.in.h:2
 msgid "Drag file to print"
-msgstr ""
+msgstr "Raahaa tulostettava tiedosto"
 
 #: ../config/contents.xml.in.h:3
-#, fuzzy
 msgid "File manager"
 msgstr "Tiedostonhallinta"
 
 #: ../config/contents.xml.in.h:4
 msgid "Find and run applications"
-msgstr ""
+msgstr "Etsi ja suorita sovelluksia"
 
 #: ../config/contents.xml.in.h:5
 msgid "Konqueror"
-msgstr ""
+msgstr "Konqueror"
 
 #: ../config/contents.xml.in.h:6
 msgid "Konqueror File Manager"
-msgstr ""
+msgstr "Konqueror-tiedostonhallinta"
 
 #: ../config/contents.xml.in.h:7
 msgid "Manual"
-msgstr ""
+msgstr "Käsikirja"
 
 #: ../config/contents.xml.in.h:8
 msgid "Mozilla Web Browser"
-msgstr ""
+msgstr "Mozilla web-selain"
 
 #: ../config/contents.xml.in.h:9
 msgid "Music player"
-msgstr ""
+msgstr "Musiikkisoitin"
 
 #: ../config/contents.xml.in.h:10
 msgid "Nautilus"
-msgstr ""
+msgstr "Nautilus"
 
 #: ../config/contents.xml.in.h:11
 msgid "Nautilus File Manager"
-msgstr ""
+msgstr "Nautilus-tiedostonhallinta"
 
 #: ../config/contents.xml.in.h:12
-#, fuzzy
 msgid "Printer Management"
-msgstr "Tiedostonhallinta"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Osan poisto poistaa myös sen ponnahdusvalikon."
-
-#~ msgid "Caption:"
-#~ msgstr "Valikkoteksti:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Kuvaus:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Lisää alavalikko"
-
-#~ msgid "Change menu item"
-#~ msgstr "Muuta valikon osaa"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Napsauta hiiren 3-nappia muuttaaksesi osaa"
-
-#~ msgid "Add launcher"
-#~ msgstr "Lisää käynnistin"
-
-#~ msgid "Add new item"
-#~ msgstr "Lisää uusi osa"
-
-#~ msgid "Left"
-#~ msgstr "Vasemmalla"
-
-#~ msgid "Right"
-#~ msgstr "Oikealla"
-
-#~ msgid "Top"
-#~ msgstr "Päällä"
-
-#~ msgid "Bottom"
-#~ msgstr "Alla"
-
-#~ msgid "Popup position:"
-#~ msgstr "Ponnahdusvalikon sijainti:"
-
-#, fuzzy
-#~ msgid "Alternative Launcher"
-#~ msgstr "Lisää alavalikko"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Ilmoitusalue"
-
-#~ msgid "Menu"
-#~ msgstr "Valikko"
-
-#~ msgid "Always on top:"
-#~ msgstr "Aina päälimmäisenä:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Näytä järje_stelmälokero tehtäväpalkissa"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Alkutyyliä ei ole saatavilla"
-
-#~ msgid "This should not happen"
-#~ msgstr "Näin ei pitäisi tapahtua"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Oletusnäytön selvittäminen ei onnistu\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Istunnonhallintaan ei saa yhteyttä"
+msgstr "Tulostuksenhallinta"
